--- a/note/事件管理.md
+++ b/note/事件管理.md
@@ -22,8 +22,14 @@ $modules = [
 
 $manager = new Manager();
 
+// 挂载到事件管理器上(Manager 主题)
+// 在每个需要触发事件的地方调用管理器的fire接口: eventsManager->fire("dispatch:beforeForward", this, forward);
+// fire调用管理器内部fireQueue()接口，因为可能一个事件需要触发多个观察者
+// call_user_func_array 开始执行注入的观察者(就是下面的回调函数)
+// Event可能是主题与观察者之间的桥梁
 $manager->attach(
   'dispatch:beforeForward',
+  // 下面才是观察者
   function (Event $event, Dispatcher $dispatcher, array $forward) use ($modules) {
       $metadata = $modules[$forward['module']]['metadata'];
       $dispatcher->setModuleName($forward['module']);
@@ -142,6 +148,7 @@ interface ManagerInterface
 
 	/**
 	 * Fires an event in the events manager causing the active listeners to be notified about it
+	 * 触发事件发送(notify())
 	 *
 	 * @param string eventType
 	 * @param object source
@@ -160,3 +167,7 @@ interface ManagerInterface
 }
 
 ```
+
+
+
+if eventsManager->fire("db:beforeQuery", this)
